<resources>
    <string name="APP初始化异常">APP初始化异常</string>
    <string name="OTA服务初始化失败">OTA服务初始化失败</string>
    <string name="Playback_failed">播放失败</string>
    <string name="Step1选择升级文件">Step1: 选择升级文件</string>
    <string name="_00_00">00h00m</string>
    <string name="_continue">carry on</string>
    <string name="_n_bpm">%1$s bpm</string>
    <string name="_n_cm">%1$dcm</string>
    <string name="_n_h">%1$sh</string>
    <string name="_n_inch">%1$d inch</string>
    <string name="_n_keeped_habbits">Has adhered to %1$d days</string>
    <string name="_n_kg">%1$d kg</string>
    <string name="_n_min">%1$d min</string>
    <string name="_n_mmhg">%1$smmHg</string>
    <string name="_n_persons">%1$d</string>
    <string name="_n_pound">%1$d lb</string>
    <string name="_status_higher">Status: high</string>
    <string name="_status_little_lower">Status: low</string>
    <string name="_status_lower">status: low</string>
    <string name="_status_none">Status: none</string>
    <string name="_status_normal">Status: normal</string>
    <string name="_status_not_normal">Status: not normal</string>
    <string name="a_fat">SFat</string>
    <string name="a_key_start">One button opens</string>
    <string name="a_sign">One-sentence signature</string>
    <string name="a_thin">SThin</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="action_settings">Settings</string>
    <string name="ad">Ad</string>
    <string name="add_contract">add contact</string>
    <string name="add_files_first">Please add files first</string>
    <string name="add_friend">添加好友</string>
    <string name="add_friend_content">%1$s想添加你为好友</string>
    <string name="add_friend_failed">添加好友失败</string>
    <string name="bind">Bind</string>
    <string name="mine_txt">Profil</string>
    <string name="more_txt">Set</string>
    <string name="notices">Precautions</string>
    <string name="pay_bind_steps">Binding steps</string>
    <string name="pay_qrcode_notice_1">1. It is recommended to upload the QR code of black and white color;</string>
    <string name="pay_qrcode_notice_2">2. Please keep the network unblocked;</string>
    <string name="pay_qrcode_notice_3">3. During the binding process, please close the watch close to the mobile phone. Do not operate the mobile phone and watch;</string>
    <string name="pay_qrcode_notice_4">4. Ensure that the watch is sufficient.</string>
    <string name="pay_qrcode_opr_1">1. Open%s, save the receiving code to the local area;</string>
    <string name="pay_qrcode_opr_2">2. Open%1$s, enter the device-wallet-%2$s;</string>
    <string name="pay_qrcode_opr_3">3. Click the two -dimensional code area above to add or replace the collection of the QR code;</string>
    <string name="pay_qrcode_opr_4">4. Click the binding button below to bind the collection code to the watch.</string>
    <string name="pref_category_title_battery">Battery</string>
    <string name="pref_category_title_compatibility">Compatibility</string>
    <string name="pref_category_title_connection_parameter">Connection Parameter</string>
    <string name="pref_category_title_general">General</string>
    <string name="pref_category_title_version">Image Version</string>
    <string name="pref_title_connection_parameter_latency">Latency</string>
    <string name="pref_title_connection_parameter_max_interval">Max Interval</string>
    <string name="pref_title_connection_parameter_min_interval">Min Interval</string>
    <string name="pref_title_connection_parameter_timeout">timeout</string>
    <string name="pref_title_dfu">DFU Configure</string>
    <string name="pref_title_dfu_automatic_active">Automatic Active Image</string>
    <string name="pref_title_dfu_automatic_active_summary_off">Prompt to active image after the upgrade is successful</string>
    <string name="pref_title_dfu_automatic_active_summary_on">Automatically active image after the upgrade is successful</string>
    <string name="pref_title_dfu_bank_link">Connect Back</string>
    <string name="pref_title_dfu_bank_link_summary">Actively search and establish a LE connection after the upgrade is successful</string>
    <string name="pref_title_dfu_battery_check">Battery Check</string>
    <string name="pref_title_dfu_battery_check_summary_off">No Battery Check</string>
    <string name="pref_title_dfu_battery_check_summary_on">Low Battery Warning</string>
    <string name="pref_title_dfu_battery_low_threshold">Low Battery Threshold</string>
    <string name="pref_title_dfu_breakpoint_resume">Breakpoint Resume</string>
    <string name="pref_title_dfu_breakpoint_resume_summary_off">transfer from the start offset</string>
    <string name="pref_title_dfu_breakpoint_resume_summary_on">Retransfer from the received image offset during the last connection</string>
    <string name="pref_title_dfu_connection_parameters_latency">Close Latency</string>
    <string name="pref_title_dfu_connection_parameters_latency_timeout">Close Latency Timeout(s)</string>
    <string name="pref_title_dfu_error_action_close_gatt">Close GATT</string>
    <string name="pref_title_dfu_error_action_refresh_device">Refresh device service cache when disconnect</string>
    <string name="pref_title_dfu_file_location">File Location</string>
    <string name="pref_title_dfu_file_suffix">File Suffix</string>
    <string name="pref_title_dfu_flow_control">Flow Control</string>
    <string name="pref_title_dfu_flow_control_interval">Flow Control(Unit:50ms)</string>
    <string name="pref_title_dfu_image_section_size_check">Image Section Size Check</string>
    <string name="pref_title_dfu_image_section_size_check_summary_off">No Image Size and Section Size Check</string>
    <string name="pref_title_dfu_image_section_size_check_summary_on">Warning when image size exceed the flash section size of images</string>
    <string name="pref_title_dfu_mtu_update">MTU Update</string>
    <string name="pref_title_dfu_ota_service_uuid">OTA Service</string>
    <string name="pref_title_dfu_progress_type">Progress Type</string>
    <string name="pref_title_dfu_success_hint">Sussess Hint</string>
    <string name="pref_title_dfu_throughput">Throughput</string>
    <string name="pref_title_dfu_throughput_summary_off">No throughtput out</string>
    <string name="pref_title_dfu_throughput_summary_on">Calculate throughput</string>
    <string name="pref_title_dfu_upload_file_prompt">Upload File Prompt</string>
    <string name="pref_title_dfu_upload_file_prompt_summary_off">Upload all of the content of the image file</string>
    <string name="pref_title_dfu_upload_file_prompt_summary_on">Prompt when upload pack file which contains multiple sub files</string>
    <string name="pref_title_dfu_version_check">Image Version Check</string>
    <string name="pref_title_dfu_version_check_mode">Version Check Mode</string>
    <string name="pref_title_dfu_version_check_summary_off">Do not check the firmware version, all files will be upgraded.</string>
    <string name="pref_title_dfu_version_check_summary_on">Low Version Warning</string>
    <string name="pref_title_dfu_workmode_prompt">Workmode Prompt</string>
    <string name="pref_title_dfu_workmode_prompt_summary_off">Automatically, prefer to silent mode when silent mode is supported</string>
    <string name="pref_title_dfu_workmode_prompt_summary_on">Prompt when support multiple work mode</string>
    <string name="pref_title_function_test">Function Test</string>
    <string name="pref_title_select_file_type">Browser File Type</string>
    <string name="rtk_pref_category_title_log">Log</string>
    <string name="rtk_pref_title_background_run">Background running</string>
    <string name="rtk_pref_title_bt_scan_filter_addr">Mac Address</string>
    <string name="rtk_pref_title_bt_scan_filter_connectable">Connectable</string>
    <string name="rtk_pref_title_bt_scan_filter_name">Device Name</string>
    <string name="rtk_pref_title_bt_scan_filter_name_nullable">Name Nullable</string>
    <string name="rtk_pref_title_bt_scan_filter_rssi">RSSI</string>
    <string name="rtk_pref_title_bt_scan_filter_service_uuid">Service UUID</string>
    <string name="rtk_pref_title_bt_scan_filter_service_uuid_hogp">HOGP Service</string>
    <string name="rtk_pref_title_bt_scan_filter_service_uuid_hogp_summary">00001812-0000-1000-8000-00805f9b34fb</string>
    <string name="rtk_pref_title_bt_scan_mechanism">Scan Mechanism</string>
    <string name="rtk_pref_title_category_sys_settings">System</string>
    <string name="rtk_pref_title_debug">DEBUG</string>
    <string name="rtk_pref_title_debug_summary_off">Nomal Mode</string>
    <string name="rtk_pref_title_debug_summary_on">Debug Mode, read log data</string>
    <string name="rtk_pref_title_developer_options_summary">Open Developer Options</string>
    <string name="rtk_pref_title_developer_optoins">Developer Options</string>
    <string name="rtk_pref_title_device_info">Device Info</string>
    <string name="rtk_pref_title_device_info_summary">Open Device Info</string>
    <string name="rtk_pref_title_dump_hci">Dump HCI</string>
    <string name="rtk_pref_title_dump_hci_summary">/DevAssistant/btsnoop/</string>
    <string name="rtk_pref_title_log">Auto clear log</string>
    <string name="rtk_pref_title_log_level">Log Level</string>
    <string name="rtk_pref_title_sys_settings_bluetooth">Bluetooth</string>
    <string name="rtk_pref_title_sys_settings_bluetooth_summary">Open System Settings Bluetooth</string>
    <string name="rtk_pref_title_sys_settings_location">Location</string>
    <string name="rtk_pref_title_sys_settings_location_summary">Open System Settings Location</string>
    <string name="rtk_pref_title_upgrade">Auto check upgrade</string>
    <string name="rtk_summaryOff">OFF</string>
    <string name="rtk_summaryOn">ON</string>
    <string name="rtk_summaryOn_log">save latest 3 days log</string>
    <string name="rtk_summaryOn_upgrade">Auto check upgrade</string>
    <string name="rtk_switchTextOff">OFF</string>
    <string name="rtk_switchTextOn">ON</string>
    <string name="sport_txt">Activities</string>
    <string name="step_txt">Home</string>
</resources>