<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="Settings"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/pref_title_dfu" app:iconSpaceReserved="false">
        <SwitchPreference android:title="@string/pref_title_dfu_version_check" android:key="switch_dfu_version_check" android:summaryOn="@string/pref_title_dfu_version_check_summary_on" android:summaryOff="@string/pref_title_dfu_version_check_summary_off" android:switchTextOn="@string/rtk_switchTextOn" android:switchTextOff="@string/rtk_switchTextOff" app:iconSpaceReserved="false" />
        <SwitchPreference android:title="@string/pref_title_dfu_image_section_size_check" android:key="switch_dfu_image_section_size_check" android:summaryOn="@string/pref_title_dfu_image_section_size_check_summary_on" android:summaryOff="@string/pref_title_dfu_image_section_size_check_summary_off" android:switchTextOn="@string/rtk_switchTextOn" android:switchTextOff="@string/rtk_switchTextOff" app:iconSpaceReserved="false" />
        <SwitchPreference android:title="@string/pref_title_dfu_battery_check" android:key="switch_dfu_battery_check" android:summaryOn="@string/pref_title_dfu_battery_check_summary_on" android:summaryOff="@string/pref_title_dfu_battery_check_summary_off" android:switchTextOn="@string/rtk_switchTextOn" android:switchTextOff="@string/rtk_switchTextOff" app:iconSpaceReserved="false" />
        <com.realsil.sdk.support.view.RtkListPreference android:entries="@array/dfu_battery_low_threshold_entries" android:title="@string/pref_title_dfu_battery_low_threshold" android:key="dfu_battery_low_threshold" android:summary="{v}" android:entryValues="@array/dfu_battery_low_threshold_values" app:iconSpaceReserved="false" />
        <SwitchPreference android:title="@string/pref_title_dfu_breakpoint_resume" android:key="switch_dfu_breakpoint_resume" android:summary="是否打开我呢？" android:summaryOn="@string/pref_title_dfu_breakpoint_resume_summary_on" android:summaryOff="@string/pref_title_dfu_breakpoint_resume_summary_off" android:switchTextOn="@string/rtk_switchTextOn" android:switchTextOff="@string/rtk_switchTextOff" app:iconSpaceReserved="false" />
        <SwitchPreference android:title="@string/pref_title_dfu_automatic_active" android:key="switch_dfu_automatic_active" android:summary="是否打开我呢？" android:summaryOn="@string/pref_title_dfu_automatic_active_summary_on" android:summaryOff="@string/pref_title_dfu_automatic_active_summary_off" android:switchTextOn="@string/rtk_switchTextOn" android:switchTextOff="@string/rtk_switchTextOff" app:iconSpaceReserved="false" />
        <SwitchPreference android:title="@string/pref_title_dfu_throughput" android:key="switch_dfu_throughput" android:summary="是否打开我呢？" android:summaryOn="@string/pref_title_dfu_throughput_summary_on" android:summaryOff="@string/pref_title_dfu_throughput_summary_off" android:switchTextOn="@string/rtk_switchTextOn" android:switchTextOff="@string/rtk_switchTextOff" app:iconSpaceReserved="false" />
    </PreferenceCategory>
</PreferenceScreen>
