<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen android:title="Settings"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.preference.PreferenceCategory android:title="@string/pref_title_function_test" app:iconSpaceReserved="false">
        <androidx.preference.SwitchPreference android:title="@string/pref_title_dfu_workmode_prompt" android:key="switch_dfu_work_mode_prompt" android:summary="是否打开我呢？" android:summaryOn="@string/pref_title_dfu_workmode_prompt_summary_on" android:summaryOff="@string/pref_title_dfu_workmode_prompt_summary_off" android:switchTextOn="@string/rtk_switchTextOn" android:switchTextOff="@string/rtk_switchTextOff" app:iconSpaceReserved="false" />
        <SwitchPreference android:title="@string/pref_title_dfu_upload_file_prompt" android:key="switch_dfu_upload_file_prompt" android:summary="是否打开我呢？" android:summaryOn="@string/pref_title_dfu_upload_file_prompt_summary_on" android:summaryOff="@string/pref_title_dfu_upload_file_prompt_summary_off" android:switchTextOn="@string/rtk_switchTextOn" android:switchTextOff="@string/rtk_switchTextOff" app:iconSpaceReserved="false" />
        <SwitchPreference android:title="@string/pref_title_dfu_success_hint" android:key="switch_dfu_success_hint" android:summary="是否打开我呢？" android:summaryOn="@string/rtk_summaryOn" android:summaryOff="@string/rtk_summaryOff" android:switchTextOn="@string/rtk_switchTextOn" android:switchTextOff="@string/rtk_switchTextOff" app:iconSpaceReserved="false" />
        <SwitchPreference android:title="@string/pref_title_dfu_bank_link" android:key="switch_dfu_backlink" android:summary="@string/pref_title_dfu_bank_link_summary" android:switchTextOn="@string/rtk_switchTextOn" android:switchTextOff="@string/rtk_switchTextOff" app:iconSpaceReserved="false" />
    </androidx.preference.PreferenceCategory>
    <com.realsil.sdk.support.settings.RtkListPreference android:entries="@array/dfu_file_location_entries" android:title="@string/pref_title_dfu_file_location" android:key="rtk_file_location" android:summary="{v}" android:entryValues="@array/dfu_file_location_values" app:iconSpaceReserved="false" />
    <com.realsil.sdk.support.settings.RtkListPreference android:entries="@array/dfu_progress_type_entries" android:title="@string/pref_title_dfu_progress_type" android:key="rtk_progress_type" android:summary="{v}" android:entryValues="@array/dfu_progress_type_values" app:iconSpaceReserved="false" />
    <com.realsil.sdk.support.settings.RtkListPreference android:entries="@array/rtk_select_file_type_entries" android:title="@string/pref_title_select_file_type" android:key="rtk_select_file_type" android:summary="{v}" android:entryValues="@array/rtk_select_file_type_values" app:iconSpaceReserved="false" />
</androidx.preference.PreferenceScreen>
