<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen android:title="@string/rtk_pref_title_developer_optoins" android:key="development_preference_screen"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.realsil.sdk.support.settings.RtkListPreference android:entries="@array/rtk_pref_bt_scan_mechanism_entries" android:title="@string/rtk_pref_title_bt_scan_mechanism" android:key="rtk_list_bt_scan_mechanism" android:summary="{v}" android:entryValues="@array/rtk_pref_bt_scan_mechanism_values" />
    <SwitchPreference android:title="@string/rtk_pref_title_bt_scan_filter_connectable" android:key="rtk_switch_bt_scan_filter_connectable" android:summary="是否打开我呢？" android:summaryOn="@string/rtk_summaryOn" android:summaryOff="@string/rtk_summaryOff" android:switchTextOn="@string/rtk_switchTextOn" android:switchTextOff="@string/rtk_switchTextOff" />
    <SwitchPreference android:title="@string/rtk_pref_title_bt_scan_filter_name_nullable" android:key="rtk_switch_bt_scan_filter_name_nullable" android:summary="是否打开我呢？" android:summaryOn="@string/rtk_summaryOn" android:summaryOff="@string/rtk_summaryOff" android:switchTextOn="@string/rtk_switchTextOn" android:switchTextOff="@string/rtk_switchTextOff" />
    <EditTextPreference android:title="@string/rtk_pref_title_bt_scan_filter_name" android:key="rtk_edittext_bt_scan_filter_name" android:summary="{v}" android:dialogTitle="@string/rtk_pref_title_bt_scan_filter_name" android:inputType="text" />
    <EditTextPreference android:digits="0123456789:abcdefABCDEF" android:title="@string/rtk_pref_title_bt_scan_filter_addr" android:key="rtk_edittext_bt_scan_filter_address" android:summary="{v}" android:dialogTitle="@string/rtk_pref_title_bt_scan_filter_addr" android:inputType="text" />
    <PreferenceCategory android:title="@string/rtk_pref_title_bt_scan_filter_service_uuid">
        <SwitchPreference android:title="@string/rtk_pref_title_bt_scan_filter_service_uuid_hogp" android:key="rtk_switch_bt_scan_filter_hogp_service" android:summary="是否打开我呢？" android:summaryOn="@string/rtk_pref_title_bt_scan_filter_service_uuid_hogp_summary" android:summaryOff="@string/rtk_pref_title_bt_scan_filter_service_uuid_hogp_summary" android:switchTextOn="@string/rtk_switchTextOn" android:switchTextOff="@string/rtk_switchTextOff" />
        <EditTextPreference android:digits="0123456789-" android:title="@string/rtk_pref_title_bt_scan_filter_service_uuid" android:key="rtk_edittext_bt_scan_filter_uuid" android:summary="{v}" android:dialogTitle="@string/rtk_pref_title_bt_scan_filter_service_uuid" android:inputType="text" />
    </PreferenceCategory>
    <com.realsil.sdk.support.settings.RtkListPreference android:entries="@array/rtk_pref_bt_scan_filter_rssi_entries" android:title="@string/rtk_pref_title_bt_scan_filter_rssi" android:key="rtk_list_bt_scan_filter_rssi" android:summary="{v}" android:entryValues="@array/rtk_pref_bt_scan_filter_rssi_values" />
</androidx.preference.PreferenceScreen>
