<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="Settings"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/pref_category_title_general" app:iconSpaceReserved="false">
        <EditTextPreference android:digits="-0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ" android:title="@string/pref_title_dfu_ota_service_uuid" android:key="rtk_dfu_ota_service_uuid" android:summary="{v}" android:dialogTitle="@string/pref_title_dfu_ota_service_uuid" android:inputType="text" app:iconSpaceReserved="false" />
        <SwitchPreference android:title="@string/pref_title_dfu_mtu_update" android:key="switch_dfu_mtu_update" android:summary="是否打开我呢？" android:summaryOn="@string/rtk_summaryOn" android:summaryOff="@string/rtk_summaryOff" android:switchTextOn="@string/rtk_switchTextOn" android:switchTextOff="@string/rtk_switchTextOff" app:iconSpaceReserved="false" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_category_title_connection_parameter" app:iconSpaceReserved="false">
        <EditTextPreference android:digits="\ 0123456789" android:title="@string/pref_title_connection_parameter_max_interval" android:key="et_dfu_connection_parameter_max_interval" android:summary="{v}" android:dialogTitle="@string/pref_title_connection_parameter_max_interval" android:inputType="number" app:iconSpaceReserved="false" />
        <EditTextPreference android:digits="\ 0123456789" android:title="@string/pref_title_connection_parameter_min_interval" android:key="et_dfu_connection_parameter_min_interval" android:summary="{v}" android:dialogTitle="@string/pref_title_connection_parameter_min_interval" android:inputType="number" app:iconSpaceReserved="false" />
        <EditTextPreference android:digits="\ 0123456789" android:title="@string/pref_title_connection_parameter_latency" android:key="et_dfu_connection_parameter_latency" android:summary="{v}" android:dialogTitle="@string/pref_title_connection_parameter_latency" android:inputType="number" app:iconSpaceReserved="false" />
        <EditTextPreference android:digits="\ 0123456789" android:title="@string/pref_title_connection_parameter_timeout" android:key="et_dfu_connection_parameter_timeout" android:summary="{v}" android:dialogTitle="@string/pref_title_connection_parameter_timeout" android:inputType="number" app:iconSpaceReserved="false" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_category_title_compatibility" app:iconSpaceReserved="false">
        <SwitchPreference android:title="@string/pref_title_dfu_flow_control" android:key="switch_dfu_flow_control" android:summary="是否打开我呢？" android:summaryOn="@string/rtk_summaryOn" android:summaryOff="@string/rtk_summaryOff" android:switchTextOn="@string/rtk_switchTextOn" android:switchTextOff="@string/rtk_switchTextOff" app:iconSpaceReserved="false" />
        <EditTextPreference android:digits="\ 0123456789" android:title="@string/pref_title_dfu_flow_control_interval" android:key="et_dfu_flow_control_interval" android:summary="{v}" android:dialogTitle="@string/pref_title_dfu_flow_control_interval" android:inputType="number" app:iconSpaceReserved="false" />
        <SwitchPreference android:title="@string/pref_title_dfu_connection_parameters_latency" android:key="switch_dfu_connection_params_latency" android:summary="是否打开我呢？" android:summaryOn="@string/rtk_summaryOn" android:summaryOff="@string/rtk_summaryOff" android:switchTextOn="@string/rtk_switchTextOn" android:switchTextOff="@string/rtk_switchTextOff" app:iconSpaceReserved="false" />
        <EditTextPreference android:digits="\ 0123456789" android:title="@string/pref_title_dfu_connection_parameters_latency_timeout" android:key="et_dfu_connection_params_latency_timeout" android:summary="{v}" android:dialogTitle="@string/pref_title_dfu_connection_parameters_latency_timeout" android:inputType="number" app:iconSpaceReserved="false" />
        <SwitchPreference android:title="@string/pref_title_dfu_error_action_refresh_device" android:key="switch_dfu_error_action_refresh_device" android:summary="是否打开我呢？" android:summaryOn="@string/rtk_summaryOn" android:summaryOff="@string/rtk_summaryOff" android:switchTextOn="@string/rtk_switchTextOn" android:switchTextOff="@string/rtk_switchTextOff" app:iconSpaceReserved="false" />
        <SwitchPreference android:title="@string/pref_title_dfu_error_action_close_gatt" android:key="switch_dfu_error_action_close_gatt" android:summary="是否打开我呢？" android:summaryOn="@string/rtk_summaryOn" android:summaryOff="@string/rtk_summaryOff" android:switchTextOn="@string/rtk_switchTextOn" android:switchTextOff="@string/rtk_switchTextOff" app:iconSpaceReserved="false" />
    </PreferenceCategory>
</PreferenceScreen>
