<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat android:orientation="vertical" android:background="@color/bg_color" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <include layout="@layout/include_title" />
    <LinearLayout android:orientation="vertical" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ImageView android:layout_gravity="center_horizontal" android:id="@id/img_qrcode" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:src="@mipmap/equipment_alipay_add" />
        <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="30.0dip" android:layout_weight="1.0">
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
                <TextView android:text="@string/pay_bind_steps" style="@style/pay_qrcode_tv0_style" />
                <TextView android:id="@id/tv_qrcode_opr_1" android:text="@string/pay_qrcode_opr_1" style="@style/pay_qrcode_tv1_style" />
                <TextView android:id="@id/tv_qrcode_opr_2" android:text="@string/pay_qrcode_opr_2" style="@style/pay_qrcode_tv1_style" />
                <TextView android:id="@id/tv_qrcode_opr_3" android:text="@string/pay_qrcode_opr_3" style="@style/pay_qrcode_tv1_style" />
                <TextView android:id="@id/tv_qrcode_opr_4" android:text="@string/pay_qrcode_opr_4" style="@style/pay_qrcode_tv1_style" />
                <TextView android:layout_marginTop="30.0dip" android:text="@string/notices" style="@style/pay_qrcode_tv0_style" />
                <TextView android:id="@id/tv_qrcode_tips_1" android:text="@string/pay_qrcode_notice_1" style="@style/pay_qrcode_tv1_style" />
                <TextView android:text="@string/pay_qrcode_notice_2" style="@style/pay_qrcode_tv1_style" />
                <TextView android:text="@string/pay_qrcode_notice_3" style="@style/pay_qrcode_tv1_style" />
                <TextView android:text="@string/pay_qrcode_notice_4" style="@style/pay_qrcode_tv1_style" />
            </LinearLayout>
        </ScrollView>
        <Button android:textSize="20.0sp" android:textColor="@color/white" android:id="@id/btn_bind" android:background="@drawable/selector_button_pay_qrcode_submit" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginRight="15.0dip" android:text="@string/bind" />
    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>
