<?xml version="1.0" encoding="utf-8"?>
<RadioGroup android:gravity="bottom" android:orientation="horizontal" android:id="@id/grp_nav" android:background="@color/bottom_nav_bg_color" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RadioButton android:id="@id/rad_1" android:checked="true" android:text="@string/step_txt" style="@style/bottom_nav_rad_style" />
    <RadioButton android:id="@id/rad_2" android:text="@string/more_txt" style="@style/bottom_nav_rad_style" />
    <RadioButton android:id="@id/rad_3" android:text="@string/sport_txt" style="@style/bottom_nav_rad_style" />
    <RadioButton android:id="@id/rad_4" android:text="@string/mine_txt" style="@style/bottom_nav_rad_style" />
</RadioGroup>
